--- a/docs/3.0/deploy/run-flows-in-local-processes.mdx
+++ b/docs/3.0/deploy/run-flows-in-local-processes.mdx
@@ -185,7 +185,7 @@ For more ways to store and access flow code, see the [Retrieve code from storage
 <Tip>
 **You can serve loaded flows**
 
-You can serve a flow loaded from remote storage with the same [`serve`](#serv3-a-flow) method as a local flow:
+You can serve a flow loaded from remote storage with the same [`serve`](#serve-a-flow) method as a local flow:
 
 ```python serve_loaded_flow.py
 from prefect import flow
@@ -214,4 +214,4 @@ Reasons to create a work-pool based deployment include:
 
 Work pools are popular with data platform teams because they allow you to manage infrastructure configuration across an organization.
 
-Learn more about work-pool based deployments in the [Configure dynamic infrastructure with work pools page](/3.0/deploy/infrastructure-concepts/work-pools)
+Learn more about work-pool based deployments on the [Configure dynamic infrastructure with work pools page](/3.0/deploy/infrastructure-concepts/work-pools)
