--- a/docs/3.0/deploy/infrastructure-concepts/store-flow-code.mdx
+++ b/docs/3.0/deploy/infrastructure-concepts/store-flow-code.mdx
@@ -63,30 +63,6 @@ If using the Python `deploy` method with a private repository that references a 
         )
     ```
 
-    ```python secret_block.py
-    from prefect import flow
-    from prefect.runner.storage import GitRepository
-    from prefect.blocks.system import Secret
-
-
-    if __name__ == "__main__":
-
-        github_repo = GitRepository(
-            url="https://github.com/org/my-private-repo.git",
-            credentials={
-                "access_token": Secret.load("github-access-token")
-            }
-        )
-
-        flow.from_source(
-            source=github_repo,
-            entrypoint="gh_credentials_block.py:my_flow",
-        ).deploy(
-            name="private-github-deploy",
-            work_pool_name="my_pool",
-        )
-    ```
-
     ```python gh_credentials_block.py
     from prefect import flow
     from prefect.runner.storage import GitRepository
@@ -213,7 +189,9 @@ If using the Python `deploy` method with a private repository that references a 
     if __name__ == "__main__":
         github_repo=GitRepository(
             url="https://bitbucket.com/org/my-private-repo.git",
-            credentials=Secret.load("my-secret-block-with-my-bb-credentials")
+            credentials={
+                "access_token": Secret.load("my-secret-block-with-my-bb-credentials")
+            },
         )
         
         flow.from_source(
@@ -306,7 +284,9 @@ If using the Python `deploy` method with a private repository that references a 
     if __name__ == "__main__":
         gitlab_repo = GitRepository(
             url="https://gitlab.com/org/my-private-repo.git",
-            credentials=Secret.load("my-secret-block-with-my-gl-credentials")
+            credentials={
+                "access_token": Secret.load("my-secret-block-with-my-gl-credentials")
+            },
         )
 
         flow.from_source(   
@@ -500,7 +480,7 @@ We also include Python code that shows how to use an existing storage block and 
         )
     ```
 
-    ```python s3_blocks.py
+    ```python s3_block.py
 
     from prefect import flow
     from prefect_aws.s3 import S3Bucket
@@ -591,7 +571,7 @@ We also include Python code that shows how to use an existing storage block and 
         )
     ```
 
-    ```python azure_blocks.py
+    ```python azure_block.py
     from prefect import flow
     from prefect_azure import AzureBlobCredentials, AzureBlobStorage
 
@@ -678,7 +658,7 @@ We also include Python code that shows how to use an existing storage block and 
         )
     ```
 
-    ```python gcs_blocks.py
+    ```python gcs_block.py
     from prefect import flow
     from prefect_gcp import GcpCredentials, GCSBucket
 
