--- a/docs/3.0/manage/settings-and-profiles.mdx
+++ b/docs/3.0/manage/settings-and-profiles.mdx
@@ -46,7 +46,7 @@ PREFECT_SERVER_ALLOW_EPHEMERAL_MODE='True' (from profile)
 <Tip>
 **What is `PREFECT_SERVER_ALLOW_EPHEMERAL_MODE`?**
 
-This setting allows a Prefect server to be run ephemerally as needed without starting a server process.
+This setting allows a Prefect server to be run ephemerally as needed without explicitly starting a server process.
 </Tip>
 
 The `prefect profile` CLI commands enable you to create, review, and manage profiles:
