--- a/docs/integrations/prefect-dbt/index.mdx
+++ b/docs/integrations/prefect-dbt/index.mdx
@@ -6,7 +6,7 @@ With `prefect-dbt`, you can trigger and observe dbt Cloud jobs, execute dbt Core
 Prefect provides a global view of the state of your workflows and allows you to take action based on state changes.
 
 Prefect integrations may provide pre-built [blocks](/latest/develop/blocks/), [flows](/latest/develop/flows/), or [tasks](/latest/develop/tasks/) for interacting with external systems.
-Block types in this library allow you to do such things as a dbt Cloud job or execute a dbt Core command.
+Block types in this library allow you to do such things as run a dbt Cloud job or execute a dbt Core command.
 
 ## Getting started
 
