--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -35,7 +35,7 @@ if __name__ == "__main__":
 ```
 
 The `serve` method creates a deployment from your flow and immediately begins listening for scheduled runs to execute. 
-This example also creates a schedule so that the flow will run every minute of every day.
+Providing `cron="* * * * *"` to `.serve` associates a schedule with your flow so it will run every minute of every day.
 
 For more configuration, you can create a deployment that uses a work pool.
 Reasons to create a work-pool based deployment include:
