--- a/docs/3.0/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0/resources/whats-new-prefect-3.mdx
@@ -49,4 +49,4 @@ Prefect 3.0 doesn't just bring new features; it also delivers significant perfor
 
 ## Release notes
 
-See release notes for each releaseed version in the [Gitub repository](https://github.com/PrefectHQ/prefect/releases).
+See release notes for each released version in the [Gitub repository](https://github.com/PrefectHQ/prefect/releases).
